--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Account/UpdateProfile.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Account/UpdateProfile.cshtml
@@ -16,12 +16,18 @@
             {
 
                 <div class="form-group">
-                    <label for="hori-pass1" class="col-sm-4 control-label">Name</label>
+                    <label for="hori-pass1" class="col-sm-4 control-label">First Name</label>
                     <div class="col-sm-7">
-                        @Html.HiddenFor(x => x.ID, new { @class = "form-control" })
-                        @Html.TextBoxFor(x => x.Name, new { @class = "form-control", @placeholder = "Full Name" })
+                        @Html.HiddenFor(x => x.Id, new { @class = "form-control" })
+                        @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control", @placeholder = "Full Name" })
                     </div>
                 </div>
+    <div class="form-group">
+        <label for="hori-pass1" class="col-sm-4 control-label">Last Name</label>
+        <div class="col-sm-7">
+            @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", @placeholder = "Full Name" })
+        </div>
+    </div>
                 <div class="form-group">
                     <label for="hori-pass1" class="col-sm-4 control-label">Email Id</label>
                     <div class="col-sm-7">
