--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Shared/_Dashboard.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Shared/_Dashboard.cshtml
@@ -63,15 +63,19 @@
                                 </ul>
                             </li>
                         }
-                        <li class="has-submenu">
-                            <a href="@Url.Action("Add", "Order", new { ID=0})"><i class="md md-color-lens"></i>Orders</a>
-                        </li>
+                        @if (user.UserTypeId != 1)
+                        {
+                            <li class="has-submenu">
+                                <a href="@Url.Action("Add", "Order", new { ID=0})"><i class="md md-color-lens"></i>Orders</a>
+                            </li>
+                        }
+                        
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right pull-right">
-                        @if (user.UserTypeId != 1)
+                        @if (user.UserTypeId != 1 && user.UserTypeId != 3)
                         {
-                            <li class="dropdown" @(user.UserTypeId==3?"style=display:none":"")>
+                            <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@user.DefaultCompany.CompanyName <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     @{
